--- a/python/test/CMakeLists.txt
+++ b/python/test/CMakeLists.txt
@@ -746,7 +746,7 @@ ot_pyinstallcheck_test (FunctionalChaos_gsobol)
 ot_pyinstallcheck_test (FunctionalChaos_gsobol_sparse)
 ot_pyinstallcheck_test (FunctionalChaos_mixed IGNOREOUT)
 ot_pyinstallcheck_test (FunctionalChaos_nd)
-#ot_pyinstallcheck_test (FunctionalChaosSobolIndices_std)
+ot_pyinstallcheck_test (FunctionalChaosSobolIndices_std)
 ot_pyinstallcheck_test (FunctionalChaosValidation_std IGNOREOUT)
 ot_pyinstallcheck_test (LeastSquaresExpansion_std IGNOREOUT)
 ot_pyinstallcheck_test (IntegrationExpansion_std IGNOREOUT)
@@ -754,7 +754,7 @@ ot_pyinstallcheck_test (KrigingAlgorithm_std)
 ot_pyinstallcheck_test (KrigingAlgorithm_funcmodel IGNOREOUT)
 ot_pyinstallcheck_test (KrigingAlgorithm_nuggetFactor IGNOREOUT)
 ot_pyinstallcheck_test (KrigingRandomVector_std)
-#ot_pyinstallcheck_test (MetaModelAlgorithm_std)
+ot_pyinstallcheck_test (MetaModelAlgorithm_std)
 ot_pyinstallcheck_test (MetaModelValidation_std)
 ot_pyinstallcheck_test (GeneralLinearModelAlgorithm_std)
 if (HMAT_FOUND)
