--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -633,20 +633,10 @@ if (BUILD_PYTHON)
       endif ()
     endif ()
 
-    if (NOT DEFINED PYTHON_SITE_PACKAGES AND NOT CMAKE_CROSSCOMPILING)
-      execute_process (COMMAND ${Python_EXECUTABLE} -c "import sysconfig, os; print(sysconfig.get_path('platlib').replace(sysconfig.get_path('data'), '').lstrip(os.path.sep))"
-                       OUTPUT_VARIABLE PYTHON_SITE_PACKAGES OUTPUT_STRIP_TRAILING_WHITESPACE)
-      file (TO_CMAKE_PATH "${PYTHON_SITE_PACKAGES}" PYTHON_SITE_PACKAGES)
-    endif ()
-
-    if (DEFINED PYTHON_SITE_PACKAGES)
-      set (OPENTURNS_PYTHON_MODULE_PATH "${PYTHON_SITE_PACKAGES}")
+    if (WIN32)
+      set (OPENTURNS_PYTHON_MODULE_PATH Lib/site-packages CACHE PATH "site-packages dir")
     else ()
-     if (WIN32)
-       set (OPENTURNS_PYTHON_MODULE_PATH Lib/site-packages)
-     else ()
-       set (OPENTURNS_PYTHON_MODULE_PATH ${CMAKE_INSTALL_LIBDIR}/python${Python_VERSION_MAJOR}.${Python_VERSION_MINOR}/site-packages)
-      endif ()
+      set (OPENTURNS_PYTHON_MODULE_PATH ${CMAKE_INSTALL_LIBDIR}/python${Python_VERSION_MAJOR}.${Python_VERSION_MINOR}/site-packages CACHE PATH "site-packages dir")
     endif ()
   endif ()
 endif ()
