--- a/lib/src/Uncertainty/Distribution/CMakeLists.txt
+++ b/lib/src/Uncertainty/Distribution/CMakeLists.txt
@@ -119,7 +119,7 @@ ot_add_source_file (Mixture.cxx)
 ot_add_source_file (Multinomial.cxx)
 ot_add_source_file (MultinomialFactory.cxx)
 ot_add_source_file (Polya.cxx)
-ot_add_source_file (NegativeBinomialFactory.cxx)
+ot_add_source_file (PolyaFactory.cxx)
 ot_add_source_file (NonCentralChiSquare.cxx)
 ot_add_source_file (NonCentralStudent.cxx)
 ot_add_source_file (Normal2DCDF.cxx)
@@ -294,7 +294,7 @@ ot_install_header_file (Mixture.hxx)
 ot_install_header_file (MultinomialFactory.hxx)
 ot_install_header_file (Multinomial.hxx)
 ot_install_header_file (Polya.hxx)
-ot_install_header_file (NegativeBinomialFactory.hxx)
+ot_install_header_file (PolyaFactory.hxx)
 ot_install_header_file (NonCentralChiSquare.hxx)
 ot_install_header_file (NonCentralStudent.hxx)
 ot_install_header_file (Normal2DCDF.hxx)
