--- a/lib/test/CMakeLists.txt
+++ b/lib/test/CMakeLists.txt
@@ -412,7 +412,7 @@ ot_check_test (Mixture_std)
 ot_check_test (Multinomial_std)
 ot_check_test (MultinomialFactory_std)
 ot_check_test (Polya_std)
-ot_check_test (NegativeBinomialFactory_std)
+ot_check_test (PolyaFactory_std)
 ot_check_test (NonCentralChiSquare_std)
 if (Boost_FOUND)
 ot_check_test (NonCentralStudent_std)
