--- a/python/src/CMakeLists.txt
+++ b/python/src/CMakeLists.txt
@@ -699,7 +699,7 @@ ot_add_python_module(dist_bundle2 dist_bundle2_module.i
                       Multinomial.i Multinomial_doc.i.in
                       MultinomialFactory.i MultinomialFactory_doc.i.in
                       Polya.i Polya_doc.i.in
-                      NegativeBinomialFactory.i NegativeBinomialFactory_doc.i.in
+                      PolyaFactory.i PolyaFactory_doc.i.in
                       NonCentralChiSquare.i NonCentralChiSquare_doc.i.in
                       NonCentralStudent.i NonCentralStudent_doc.i.in
                       Normal.i Normal_doc.i.in
