--- a/python/doc/conf.py.in
+++ b/python/doc/conf.py.in
@@ -149,7 +149,7 @@ extensions.append('sphinxcontrib.jquery')
 templates_path = ['_templates']
 
 # The suffix of source filenames.
-source_suffix = '.rst'
+source_suffix = {'.rst': 'restructuredtext'}
 
 # The encoding of source files.
 #source_encoding = 'utf-8-sig'
