--- a/python/src/OrderStatisticsMarginalChecker_doc.i.in
+++ b/python/src/OrderStatisticsMarginalChecker_doc.i.in
@@ -4,7 +4,8 @@
 Parameters
 ----------
 coll : sequence of :class:`~openturns.Distribution`
-    The marginals :math:`(F_1, \dots, F_n)` which are tested with respect to the order :math:`F_1 < \dots < F_n` in the context of the maximum order statistics distribution.
+    The marginals :math:`(F_1, \dots, F_n)` which are tested with respect to the order :math:`F_1 < \dots < F_n`
+    in the context of the maximum order statistics distribution.
 
 Notes
 -----
@@ -13,7 +14,8 @@ Three tests are performed. We note :math:`[a_i,b_i]` the range of :math:`X_i`. T
 
 - Test 1 checks that :math:`a_i \leq a_{i+1}` and :math:`b_i \leq b_{i+1}` for all :math:`i`.
 
-- Test 2 discretizes :math:`[0,1]` with :math:`\{\dfrac{1}{2n},\dfrac{3}{2n}, \dots,\dfrac{2n-1}{2n}\} = \{q_1, \dots, q_{2n-1} \}` where :math:`n` is defined in the :class:`~openturns.ResourceMap` with `OSMC-OptimizationEpsilon`. By default, :math:`n=100`. Test 2 checks that:
+- Test 2 discretizes :math:`[0,1]` with :math:`\{\dfrac{1}{2n},\dfrac{3}{2n}, \dots,\dfrac{2n-1}{2n}\} = \{q_1, \dots, q_{2n-1} \}`
+  where :math:`n` is defined in the :class:`~openturns.ResourceMap` with `OSMC-OptimizationEpsilon`. By default, :math:`n=100`. Test 2 checks that:
 
   .. math::
   
@@ -57,7 +59,7 @@ resCompatibility : bool
 
 Notes
 -----
-This method throws an exception in case of compatibility problem with a message indicating the first compatibility problem arised.
+This method throws an exception in case of compatibility problem with a message indicating the first compatibility problem found.
 "
 
 // ---------------------------------------------------------------------
@@ -67,6 +69,28 @@ This method throws an exception in case of compatibility problem with a message 
 Returns
 -------
 indepMarginals : :class:`~openturns.Indices`
-    Indicates the indices that build some independent sets of marginals. If we note :math:`indepMarginals = [i_1, i_2]` then the sub random vectors :math:`(X_1, \dots, X_{i_1})`,  :math:`(X_{i_1+1}, \dots, X_{i_2})` and  :math:`(X_{i_2+1}, \dots, X_n)` are independent.
-    This information is automatically used by OpenTURNS to build the appropriated maximum entropy order statistics distribution."
+    Indicates the indices that build some independent sets of marginals.
+    If we note :math:`indepMarginals = [i_1, i_2]` then the sub random vectors :math:`(X_1, \dots, X_{i_1})`,
+    :math:`(X_{i_1+1}, \dots, X_{i_2})` and  :math:`(X_{i_2+1}, \dots, X_n)` are independent.
+    This information is automatically used to build the appropriate maximum entropy order statistics distribution."
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OT::OrderStatisticsMarginalChecker::getOptimizationAlgorithm
+"Accessor to the optimization algorithm used for the computation.
+
+Returns
+-------
+algo : :class:`~openturns.OptimizationAlgorithm`
+    Optimization algorithm used for the computation."
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OT::OrderStatisticsMarginalChecker::setOptimizationAlgorithm
+"Accessor to the optimization algorithm used for the computation.
+
+Parameters
+----------
+algo : :class:`~openturns.OptimizationAlgorithm`
+    Optimization algorithm to use for the computation."
 
