SpecFunc: Rename MaxScalar to Infinity

--- a/python/src/LinearLeastSquaresCalibration_doc.i.in
+++ b/python/src/LinearLeastSquaresCalibration_doc.i.in
@@ -31,7 +31,7 @@ Notes
 LinearLeastSquaresCalibration is the minimum variance estimator of the parameter of a given model under the assumption that this parameter acts linearly in the model.
 
 The prior distribution of the parameter is a noninformative prior
-emulated using a flat :class:`~openturns.Normal` centered on the `startingPoint` and with a variance equal to SpecFunc.MaxScalar.
+emulated using a flat :class:`~openturns.Normal` centered on the `startingPoint` and with a variance equal to SpecFunc.Infinity.
 
 The posterior distribution of the parameter is :class:`~openturns.Normal` and reflects the 
 variability of the optimum parameter depending on the observation sample. 
