--- a/python/src/NonLinearLeastSquaresCalibration_doc.i.in
+++ b/python/src/NonLinearLeastSquaresCalibration_doc.i.in
@@ -21,7 +21,7 @@ of a given model with no assumption on the dependence of the model with respect
 to the parameter.
 
 The prior distribution of the parameter is a noninformative prior
-emulated using a flat :class:`~openturns.Normal` centered on the `startingPoint` and with a variance equal to SpecFunc.MaxScalar.
+emulated using a flat :class:`~openturns.Normal` centered on the `startingPoint` and with a variance equal to SpecFunc.Infinity.
 
 The posterior distribution of the parameter is :class:`~openturns.Normal` and reflects the 
 variability of the optimum parameter depending on the observation sample. 
