--- a/python/src/Domain_doc.i.in
+++ b/python/src/Domain_doc.i.in
@@ -8,3 +8,5 @@ OT_Domain_contains_doc
 OT_Domain_computeDistance_doc
 %feature("docstring") OT::Domain::getDimension
 OT_Domain_getDimension_doc
+%feature("docstring") OT::Domain::draw
+OT_Domain_draw_doc
