--- a/python/src/Evaluation_doc.i.in
+++ b/python/src/Evaluation_doc.i.in
@@ -36,6 +36,8 @@ OT_Evaluation_getParameterDescription_doc
 OT_Evaluation_setParameterDescription_doc
 %feature("docstring") OT::Evaluation::draw
 OT_Evaluation_draw_doc
+%feature("docstring") OT::Evaluation::drawCrossCuts
+OT_Evaluation_drawCrossCuts_doc
 %feature("docstring") OT::Evaluation::isLinear
 OT_Evaluation_isLinear_doc
 %feature("docstring") OT::Evaluation::isLinearlyDependent
