Fix misleading SquaredExponential ctor doc
and misleading BoxCoxTransform ctor doc.
Fixes #1077

--- a/python/src/BoxCoxTransform_doc.i.in
+++ b/python/src/BoxCoxTransform_doc.i.in
@@ -4,9 +4,9 @@
 Refer to :ref:`boxcox_transformation`.
 
 Available constructors:
-    BoxCoxTransform(*lambdaVect, shiftVect = [0]*)
+    BoxCoxTransform(*lambdaVect, shiftVect*)
 
-    BoxCoxTransform(*lambda, shift=0*)
+    BoxCoxTransform(*lambda, shift*)
 
 Parameters
 ----------
