--- a/python/src/SquaredExponential_doc.i.in
+++ b/python/src/SquaredExponential_doc.i.in
@@ -2,7 +2,7 @@
 "Squared exponential covariance function.
 
 Available constructors:
-    SquaredExponential(*spatialDim=1*)
+    SquaredExponential(*spatialDim*)
 
     SquaredExponential(*scale*)
 
