Modified the explained FORM example and Fixed CleaningStrategy

--- a/python/src/CleaningStrategy_doc.i.in
+++ b/python/src/CleaningStrategy_doc.i.in
@@ -12,11 +12,10 @@ Parameters
 orthogonalBasis : :class:`~openturns.OrthogonalBasis`
     An OrthogonalBasis.
 maximumDimension : positive int
-    Maximum index that can be used by the :class:`~openturns.EnumerateFunction`
-    to determine the last term of the basis.
-maximumSize : positive int
-    Parameter that characterizes the cleaning strategy. It represents the 
-    number of efficient coefficients of the basis.
+    Maximum index of the basis function that can be used by the :class:`~openturns.EnumerateFunction`.
+maximumSize : positive int, :math:`maximumSize \leq maximumDimension`
+    Maximum
+    number of functions used in the meta model.
     Its default value is the `CleaningStrategy-DefaultMaximumSize` key of
     the :class:`~openturns.ResourceMap`.
 significanceFactor : float 
@@ -43,26 +42,24 @@ limit the chances of potential surrogate model overfitting.
 
 Let *maximumDimension* be the number of coefficients in the full expansion
 and let *maximumSize* be the maximum number of coefficients defined
-by the user.    
-On output, at most the minimum of *maximumDimension* and *maximumSize*
+by the user. On output, at most *maximumSize*
 coefficients are selected.
 Let :math:`\epsilon` be the value of the *significanceFactor*.
 The method proceeds as follows:
 
-- Generate an initial PC basis made of the *maximumDimension* first polynomials
+- Generate an initial PC basis made of the *maximumSize* first functions
   (according to the adopted :class:`~openturns.EnumerateFunction`), or
-  equivalently an initial set of indices :math:`\cK = \{0, \ldots, \textrm{maximumDimension} - 1\}`.
+  equivalently an initial set of indices :math:`\cK = \{0, \ldots, \textrm{maximumSize} - 1\}`.
 
-- Discard from the basis any polynomial :math:`\Psi_j` associated with 
-  an insignificant coefficient, i.e. such that:
+- Discard from the basis any function :math:`\Psi_j` associated with 
+  an insignificant coefficient :math:`a_j`, i.e. such that:
 
 .. math::
 
     |a_j| \leq \epsilon \times \max_{ k \in \cK, k \neq 0 } |a_k|.
 
-- Add the next basis term :math:`\Psi_{k+1}` to the current basis :math:`\cK`.
-- Reiterate the procedure until the minimum of *maximumDimension* and
-  *maximumSize* has been reached.
+- Add the next function to the current basis :math:`\cK` according to the :class:`~openturns.EnumerateFunction` used.
+- Reiterate the procedure until the first *maximumDimension* functions have been considered.
 
 
 Examples
@@ -105,7 +102,7 @@ index : int
 // ---------------------------------------------------------------------
 
 %feature("docstring") OT::CleaningStrategy::getMaximumSize
-"Accessor to the maximum size of the orthogonal basis.
+"Accessor to the maximum number of functions used.
 
 Returns
 -------
@@ -133,7 +130,7 @@ setSignificanceFactor"
 // ---------------------------------------------------------------------
 
 %feature("docstring") OT::CleaningStrategy::setMaximumSize
-"Accessor to the maximum size of the orthogonal basis.
+"Accessor to the maximum number of functions used.
 
 Parameters
 ----------
