New GaussianProcess classes
* Implement GaussianProcessFitterResult class

This class enables to store a result of a gaussian process fitter
(fitting a gaussian process by maximizing the log-likelihood wrt data,
covariance model, trend parameters...

We store all elements that will be reusable for conditioning, optimal
parameters...

* Implementing GaussianProcessFitter

This class allows fitting a gaussian process using lapack/hmat algebra
It relies on data, cov model, basis and fit the optimal parameters and
stores the result into a GaussianProcessFitterResult object

Cobyla is set as the default optim solver

Document the class
Add tests (cxx/py)

* Added GaussianProcessRegressionResult class.

The class allows to store result after a gaussian process regression
(class not yet implemented)

This result class inherits from GaussianProcessFitterResult as it uses
most of its elements + conditional expectation.

* Implement GaussianProcessRegression

This class allows to estimate gaussian process regression (aka kriging)
using already fitted GP and/or a calibrated covariance model + trend
function

Implement also its cxx/py tests including with the HMAT & NLOpt features

Finally add entry points for all GP classes in the sphinx API

* Added new GaussianProcessConditionalCovariance class for post processing
GPR result (cond cov).

This class allows estimating conditional mean and conditional
covariance, which should not be anymore be services of a Result class

Add the entry point in the sphinx documentation + cxx/py tests

Also updated gpf and gpr pyplots to account for the illustrate the usage
of the new GPCC class

--- a/lib/src/Uncertainty/Algorithm/MetaModel/Kriging/CMakeLists.txt
+++ b/lib/src/Uncertainty/Algorithm/MetaModel/Kriging/CMakeLists.txt
@@ -10,7 +10,11 @@ ot_add_source_file (KrigingAlgorithm.cxx)
 ot_add_source_file (KrigingResult.cxx)
 ot_add_source_file (GeneralLinearModelResult.cxx)
 ot_add_source_file (GeneralLinearModelAlgorithm.cxx)
-
+ot_add_source_file (GaussianProcessFitterResult.cxx)
+ot_add_source_file (GaussianProcessFitter.cxx)
+ot_add_source_file (GaussianProcessRegressionResult.cxx)
+ot_add_source_file (GaussianProcessRegression.cxx)
+ot_add_source_file (GaussianProcessConditionalCovariance.cxx)
 
 ot_install_header_file (KrigingEvaluation.hxx)
 ot_install_header_file (KrigingGradient.hxx)
@@ -18,5 +22,10 @@ ot_install_header_file (KrigingAlgorithm.hxx)
 ot_install_header_file (KrigingResult.hxx)
 ot_install_header_file (GeneralLinearModelResult.hxx)
 ot_install_header_file (GeneralLinearModelAlgorithm.hxx)
+ot_install_header_file (GaussianProcessFitterResult.hxx)
+ot_install_header_file (GaussianProcessFitter.hxx)
+ot_install_header_file (GaussianProcessRegressionResult.hxx)
+ot_install_header_file (GaussianProcessRegression.hxx)
+ot_install_header_file (GaussianProcessConditionalCovariance.hxx)
 
 ot_install_header_file (OTKriging.hxx)
