--- a/python/test/CMakeLists.txt
+++ b/python/test/CMakeLists.txt
@@ -758,12 +758,19 @@ ot_pyinstallcheck_test (KrigingRandomVector_std)
 ot_pyinstallcheck_test (MetaModelAlgorithm_std)
 ot_pyinstallcheck_test (MetaModelValidation_std)
 ot_pyinstallcheck_test (GeneralLinearModelAlgorithm_std)
+ot_pyinstallcheck_test (GaussianProcessFitter_std IGNOREOUT)
+ot_pyinstallcheck_test (GaussianProcessRegression_std IGNOREOUT)
+ot_pyinstallcheck_test (GaussianProcessConditionalCovariance_std IGNOREOUT)
 if (HMAT_FOUND)
   ot_pyinstallcheck_test (KrigingAlgorithm_std_hmat)
   ot_pyinstallcheck_test (GeneralLinearModelAlgorithm_std_hmat)
+  ot_pyinstallcheck_test (GaussianProcessFitter_std_hmat IGNOREOUT)
+  ot_pyinstallcheck_test (GaussianProcessRegression_std_hmat IGNOREOUT)
 endif ()
 if (NLopt_FOUND)
   ot_pyinstallcheck_test (GeneralLinearModelAlgorithm_nlopt IGNOREOUT)
+  ot_pyinstallcheck_test (GaussianProcessFitter_nlopt IGNOREOUT)
+  ot_pyinstallcheck_test (GaussianProcessRegression_nlopt IGNOREOUT)
 endif ()
 ot_pyinstallcheck_test (LinearModelAlgorithm_std)
 ot_pyinstallcheck_test (LinearModelAnalysis_std)
