--- a/python/src/Distribution_doc.i.in
+++ b/python/src/Distribution_doc.i.in
@@ -194,6 +194,10 @@ OT_Distribution_getStandardDistribution_doc
 OT_Distribution_getStandardRepresentative_doc
 %feature("docstring") OT::Distribution::getSupport
 OT_Distribution_getSupport_doc
+%feature("docstring") OT::Distribution::getSupportEpsilon
+OT_Distribution_getSupportEpsilon_doc
+%feature("docstring") OT::Distribution::setSupportEpsilon
+OT_Distribution_setSupportEpsilon_doc
 %feature("docstring") OT::Distribution::getSingularities
 OT_Distribution_getSingularities_doc
 %feature("docstring") OT::Distribution::getProbabilities
